syntax = "proto3";
package chat;

message Message {
	string body = 1;
}

message Cosita {
	string saludo = 1;
	int64 posicion = 2;
}

message Energetica {
	string RamoASalvar = 1;
	int64 nEnergeticas = 2;
	string sabor = 3;
}

service ChatService {
	rpc SayHello(Message) returns (Message) {}
	rpc Saludar(Cosita) returns (Cosita){}
}

service ChatService2Revenge {
	rpc SalvarSemestre(Energetica) returns (Energetica) {}
}